# rust-event-driven-story-generator

./: .gitignore  Cargo.toml  README.md  machine.asl.json  samconfig.toml  template.yaml
backend/: Cargo.toml  Makefile  machine.asl.json  template.yaml
backend/functions/client-notifier/: main.rs
backend/functions/story-audio-status-notifier/: main.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: root.tsx
frontend/src/routes/: index.tsx
functions/client-notifier/: main.rs
functions/hello/: main.rs
functions/story-audio-status-notifier/: main.rs
functions/story-text-generator/: main.rs
