[package]
name = "event-driven-story-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-sfn = "0.26.0"
aws_lambda_events = "0.8.3"
lambda_runtime = "0.6.0"
openssl-sys = { version = "0.9.80", features = ["vendored"] }
reqwest = { version = "0.11.16", features = ["json", "serde_json"] }
serde = "1.0.136"
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "story-text-generator"
path = "./functions/story-text-generator/main.rs"

[[bin]]
name = "story-audio-status-notifier"
path = "./functions/story-audio-status-notifier/main.rs"
