[package]
name = "event-driven-story-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-iotdataplane = "0.26.0"
aws-sdk-s3 = "0.26.0"
aws-sdk-sfn = "0.26.0"
aws_lambda_events = "0.8.3"
futures = "0.3.28"
lambda_runtime = "0.6.0"
openssl-sys = { version = "0.9.80", features = ["vendored"] }
reqwest = { version = "0.11.16", features = ["json", "serde_json"] }
serde = "1.0.136"
serde_dynamo = "4.2.1"
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.12"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "story-text-generator"
path = "./functions/story-text-generator/main.rs"

[[bin]]
name = "story-audio-status-notifier"
path = "./functions/story-audio-status-notifier/main.rs"

[[bin]]
name = "client-notifier"
path = "./functions/client-notifier/main.rs"
